Add CloudFormation deployment and fix runtime initialization timeout
Bug fixes:
- Fix AgentCore 30s runtime initialization timeout by deferring heavy
  imports (langchain, boto3, etc.) to first request instead of module load
- Add default AWS region (us-east-1) to boto3 clients to prevent
  region not configured errors

New features:
- Add CloudFormation template for one-click deployment (Cognito, Lambda,
  API Gateway, EventBridge, Secrets Manager)
- Add deploy-stack.sh interactive deployment script
- Add redeploy_agentcore.sh for quick AgentCore redeployments

Documentation:
- Update README with CloudFormation deployment option (Option A)
- Add deployment/cloudformation/README.md with detailed instructions
- Update .gitignore with credential file patterns

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ wheels/
 .aws/
 *.pem
 *.key
+cognito_config.json
+*_credentials.json
+*_secrets.json
 
 # Bedrock AgentCore cache and config
 .bedrock_agentcore/
